Add basic security
