# internal/app/api/net/http/handler/api/system/v1/doc.go
@@ -12,5 +12,9 @@
 // Produces:
 // - application/json
 //
+// SecurityDefinitions:
+//    basicAuth:
+//       type: basic
+//
 // swagger:meta
 package v1
